# automator

./: .gitignore  CMakeLists.txt  README.md  about.ui  automator.cpp  automator.h  automator.qrc  automator.ui  build.sh  build_app.sh  build_universal.sh  dropfilter.cpp  dropfilter.h  error.cpp  error.h  error.ui  eventfilter.cpp  eventfilter.h  filedrop.cpp  filedrop.h  icctransform.h  job.cpp  job.h  jobman.cpp  jobman.h  jobman.ui  jobtree.cpp  jobtree.h  log.cpp  log.h  log.ui  logtree.cpp  logtree.h  mac.h  mac.mm  main.cpp  monitor.cpp  monitor.h  monitor.ui  preferences.cpp  (+12 more)
presets/: Convert image using sips.json  Dcraw test.json  Leica Q2 to DCI-P3 Lin TIFF.json
resources/: App.css  AppIcon.icns  Automator.psd  Copyright.txt
resources/AppStore/: privacy-policy.md
scripts/: macdmg.sh
